# FastAPI-BE-template

./: .gitignore  README.md  pyproject.toml
.devcontainer/: .env  devcontainer.json  docker-compose.yml
