[tool.poetry]
name = "fastapi-be-template"
version = "0.1.0"
description = "python, fastapi, backend"
authors = ["Roflaff <kimsp0317@gmail.com>"]
license = "None"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.118.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
